test: Adiciona testes de unidade e integração para relatórios
Cria testes de unidade para RelatoriosService, cobrindo cenários de sucesso e de falha. Adiciona o teste de integração inicial para RelatoriosController e a dependência spring-security-test necessária para a execução dos testes.